tests/errors/test_08.x
fn main() -> int
{

    let x: int = !1;
    let haha: bool = -true;

}